Thu Feb  4 11:45:20 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.h:
        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.cpp:
          Corrected mask and according methods.

Thu Feb  4 10:46:25 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/idl/ccm_dds.idl:
          Code aligning.

        * connectors/dds4ccm/idl/dds_rtf2_dcps.idl:
        * connectors/dds4ccm/impl/ndds/DataWriterListener_T.h:
        * connectors/dds4ccm/impl/ndds/DomainParticipantListener_T.h:
          Added implementation regarding
          ReliableReaderActivityChangedStatus.

        * connectors/dds4ccm/impl/ndds/PublisherListener_T.h:
        * connectors/dds4ccm/impl/ndds/PublisherListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.h:
        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/TopicListener_T.cpp:
          Added status logging for each DDS callback.

        * connectors/dds4ccm/impl/ndds/Utils.h:
        * connectors/dds4ccm/impl/ndds/Utils.cpp:
          Added helper methods for status logging in
          DDS callbacks.

        * connectors/dds4ccm/impl/ndds/TimeUtilities.h:
          Removed unnecessary comment.

        * connectors/dds4ccm/tests/CSLUnexpStat/Base/CSL_USTest_Base.idl:
        * connectors/dds4ccm/tests/CSLUnexpStat/Receiver/CSL_USTest_Receiver_exec.h:
        * connectors/dds4ccm/tests/CSLUnexpStat/Receiver/CSL_USTest_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/CSLUnexpStat/Sender/CSL_USTest_Sender_exec.h:
        * connectors/dds4ccm/tests/CSLUnexpStat/Sender/CSL_USTest_Sender_exec.cpp:
        * connectors/dds4ccm/tests/CSLUnexpStat/descriptors/Plan.cdp:
          Rewritten to test all unexpected status. Also removed unused
          DDS callbacks and realigned some code.

Thu Feb  4 10:38:43 UTC 2010  Martin Corino  <mcorino@remedy.nl>
