@@ -1,3 +1,12 @@
+Thu Feb  4 12:31:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/ndds/OnUnexpectedStatusHandler.h:
+        * connectors/dds4ccm/impl/ndds/OnUnexpectedStatusHandler.cpp:
+        * connectors/dds4ccm/impl/ndds/PortStatusListener_T.cpp:
+        * connectors/dds4ccm/impl/ndds/TopicListener_T.cpp:
+          Added status logging for each DDS callback. Also implemented
+          thread switch.
+
 Thu Feb  4 11:45:20 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/ndds/SubscriberListener_T.h:
